--- a/pom.xml
+++ b/pom.xml
@@ -55,4 +55,18 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+    <repository>
+        <id>maven-releases</id>
+        <name>maven-releases</name>
+        <url>http://15.206.210.236:8081/repository/maven-releases/</url>
+    </repository>
+    
+    <snapshotRepository>
+        <id>maven-snapshots</id>
+        <name>maven-snapshots</name>
+        <url>http://15.206.210.236:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
+
 </project>
